addons/weave-scope/weave-scope-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-ingress
  namespace: weave
spec:
  tls:
    - hosts:
      - scope.fdisk.cc
      secretName: wildcard.fdisk.cc
  rules:
  - host: scope.fdisk.cc
    http:
      paths:
      - path: /
        backend:
          serviceName: weave-scope-app
          servicePort: 80
